<resources>
    <string name="app_name">LPDnD</string>
    <string name="appFullName">Demand &amp; Distribution System</string>
    <string name="home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="enterusername">Enter Username</string>
    <string name="enterpassword">Enter Password</string>
    <string name="password_hint_">Enter Password *</string>
    <string name="username">Username *</string>
    <string name="userlogin">USER LOGIN</string>
    <string name="password">Password *</string>
    <string name="password_hint">Enter Password</string>
    <string name="password_required">Please Enter Password</string>
    <string name="show_password_all">Show All Passwords</string>
    <string name="login">Login</string>
    <string name="loginId">Login Id</string>
    <string name="newuserregistration">NEW USER REGISTRATION</string>
    <string name="left">\u003C</string>
    <string name="right">\u003E</string>
    <string name="submit">Submit</string>
    <string name="Company">Company</string>
    <string name="Item">SKU</string>
    <string name="DQty">Demand</string>
    <string name="CFQty">CF</string>
    <string name="DelQty">Delivery</string>
    <string name="DLQty">DLVY</string>
    <string name="AQty">Allocation</string>
    <string name="ALQty">ALLOC</string>
    <string name="BalQty">BAL</string>
    <string name="RetQty">RET</string>
    <string name="Type">PType</string>
    <string name="AssignedRoute">Assigned Route</string>
    <string name="OtherRoute">Other Route</string>
    <string name="CreateDemand">Create [+]</string>
    <string name="create_demand">Create Demand</string>
    <string name="rate">Rate</string>
    <string name="Rate">Rate\u20B9</string>
    <string name="Quantity">Quantity</string>
    <string name="Amount">Amount\u20B9</string>
    <string name="product">Product</string>
    <string name="offers">Offer(s)</string>
    <string name="credits">Designed &amp; Developed By Lateral Praxis (India) Pvt. Ltd.</string>
    <string name="refresh">Sync Data</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome, </string>
    <string name="label_ViewReports">Veiw Reports</string>
    <string name="continue_">Continue</string>
    <string name="upcontinue_">Update &amp; Continue</string>
    <string name="add">+</string>
    <string name="norecord">No Record(s) Found.</string>
    <string name="save">Save</string>
    <string name="download">Download</string>
    <string name="pick_date">Pick Date</string>
    <string name="app_description">Android drawer icon with material design animation</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="date">Demand Date: </string>
    <string name="bluetooth_devices">Bluetooth Device(s)</string>
    <string name="customer">Customer : </string>
    <string name="customerType">Customer Type</string>
    <string name="custType">Type</string>
    <string name="auction_quantity">Quantity: </string>
    <string name="start_date">Start Date: </string>
    <string name="end_date">End Date: </string>
    <string name="menu_allocation">ALLOCATION</string>
    <string name="menu_allocation_report">ALLOCATION</string>
    <string name="menu_SyncMaster">Sync Master</string>
    <string name="menu_demand">DEMAND</string>
    <string name="view_demand">View Demand</string>
    <string name="menu_deliveryView">DELIVERY</string>
    <string name="view_delivery">View Delivery</string>
    <string name="create_delivery">Create Delivery</string>
    <string name="place_order">Create Demand</string>
    <string name="go">View</string>
    <string name="show_password">Show Password</string>
    <string name="last_updated_on">Last Updated On:</string>
    <string name="btn_search">Search</string>
    <string name="status">Status:</string>
    <string name="Customer">Customer</string>
    <string name="OrderDt">Order Date</string>
    <string name="AllocatedDt">Allocated Date</string>
    <string name="DemandDt">Demand Date</string>
    <string name="additionalinfo">Additional Information:</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="the_password_should_consists_of_">The password should consists of -</string>
    <string name="password_expired">Please change your password, as your previous password has already expired.</string>
    <string name="old_password">Old Password *</string>
    <string name="new_password">New Password *</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="change_password_btn">Change Password</string>
    <string name="set_printer">Set Printer</string>
    <string name="print">Print</string>
    <string name="change_password_home">Change Password</string>
    <string name="create_customer_header">Create New Customer</string>
    <string name="customer_type">Type*</string>
    <string name="customer_name">Name*</string>
    <string name="enter_customer_name">Enter Name</string>
    <string name="country">Country*</string>
    <string name="state">State*</string>
    <string name="city">City*</string>
    <string name="pincode">Pin Code*</string>
    <string name="street">Street*</string>
    <string name="enter_street">Enter Street No.</string>
    <string name="houseNo">House No</string>
    <string name="enter_houseNo">Enter House No</string>
    <string name="landMark">Land Mark</string>
    <string name="enter_landMark">Enter Land Mark</string>
    <string name="loginID">Login Id*</string>
    <string name="enter_loginID">Enter Login Id</string>
    <string name="contactPerson">Contact Person*</string>
    <string name="enter_contactPerson">Enter Contact Person</string>
    <string name="contactPersonMobile">Mobile#*</string>
    <string name="mobile">Mobile#</string>
    <string name="enter_contactPersonMobile">Enter Mobile</string>
    <string name="email">Email Id*</string>
    <string name="enter_email">Enter Email Id</string>
    <string name="createcustomer">Submit for Activation</string>
    <string name="newUsers">New Users</string>
    <string name="existingUsers">Existing Users</string>
    <string name="header_complaint">Query</string>
    <string name="complaint_type">Type</string>
    <string name="rg_complaint">Query</string>
    <string name="rg_feedback">Feedback</string>
    <string name="complaint_category">Category*</string>
    <string name="complaint_remarks">Remarks*</string>
    <string name="enterComplaintRemarks">Enter Remarks</string>
    <string name="rating">Rating*</string>
    <string name="spComplaintCategory">Select Category</string>
    <string name="CreateComplaint">[ Create Query ]</string>
    <string name="ComplaintDate">Date</string>
    <string name="ComplaintType">Type</string>
    <string name="Rating">Rating</string>
    <string name="CatFeedback">Category Feedback</string>
    <string name="CustomerRemark">Remark</string>
    <string name="complaint_feedback_details">Query Details</string>
    <string name="CreateDelivery">[ Create Delivery ]</string>
    <string name="Vehicle">Vehicle</string>
    <string name="capacity">Capacity</string>
    <string name="capacityMT">Capacity(MT)</string>
    <string name="Available">Available</string>
    <string name="Demand">Demand</string>
    <string name="Delivery">Delivery</string>
    <string name="menu_cashDeposit">DEPOSIT</string>
    <string name="menu_payment">Receipt</string>
    <string name="menu_return">RETURNS</string>
    <string name="menu_syncTrans">SYNC</string>
    <string name="menu_masters">MASTERS</string>
    <string name="menu_reports">REPORTS</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_complaint_feedback">Post Query</string>
    <string name="deliveryPayment">Delivery &amp; Payment</string>
    <string name="menu_vehicle">VEHICLE</string>
    <string name="menu_customer">CUSTOMER</string>
    <string name="menu_rate">RATE</string>
    <string name="menu_stockAdjust">STOCK\nADJUSTMENT</string>
    <string name="menu_stockConvert">CONVERSION</string>
    <string name="menu_stockInve">INVENTORY</string>
    <string name="menu_stockOutstanding">PENDING</string>
    <string name="menu_DelRec">DELIVERY\n/RECEIPT(C)</string>
    <string name="menu_VehDelRec">DELIVERY\n/RECEIPT(V)</string>
    <string name="menu_primaryreceipt">Purchase</string>
    <string name="menu_expense">Expense</string>
    <string name="menu_excess">Excess</string>
    <string name="menu_stockAdjustment">STOCK\nADJUSTMENT</string>
    <string name="menu_customersettlement">CUSTOMER\nSETTLEMENT</string>
    <string name="menu_expenseconfirmation">EXPENSE\nCONFIRMATION</string>
    <string name="menu_excessconfirmation">EXCESS\nCONFIRMATION</string>
    <string name="menu_deliveryConfirmation">Purchase\nCONFIRMATION</string>
    <string name="menu_StockReturnView">Stock Return</string>
    <string name="menu_outlet_sale">Sale</string>
    <string name="menu_reconcile">Reconciliation</string>
    <string name="balancePayable">Balance Payable\u20B9</string>
    <string name="cashDeposit">Cash Deposit</string>
    <string name="strRoute">Route *</string>
    <string name="collection">Cash Collected\u20B9</string>
    <string name="online">Online\u20B9</string>
    <string name="total">Total</string>
    <string name="totalPayable">Total Payable\u20B9</string>
    <string name="deposit">Cash Deposited\u20B9</string>
    <string name="Return">Returned</string>
    <string name="Leakage">Leakage</string>
    <string name="CreateStockReturn">[ Create Stock Return ]</string>
    <string name="CreateStockReturnHead">Create Stock Return</string>
    <string name="viewStockReturn">View Stock Return</string>
    <string name="ReturnDate">Return Date</string>
    <string name="RouteNo">Route</string>
    <string name="remarks">Remarks</string>
    <string name="totalDeposited">Total Deposited\u20B9</string>
    <string name="chequeDeposited">Cheque Deposited\u20B9</string>
    <string name="enterRemarks">Enter Remarks</string>
    <string name="saveandnext">Save &amp; Next</string>
    <string name="cashDepositDeleteHead">CD# - Route Officer</string>
    <string name="routeofficer">Route Officer:</string>
    <string name="collectedby">Collected By:</string>
    <string name="datehead">Date:</string>
    <string name="cdhead">Cash Deposit#:</string>
    <string name="delete">Delete</string>
    <string name="modehead">Mode</string>
    <string name="amounthead">Amount\u20B9</string>
    <string name="VehicleHead">Vehicle#:</string>
    <string name="DeleteDeliveryHead">Delivery Details</string>
    <string name="DeliveryQtyHead">Quantity Details</string>
    <string name="InvoiceHead">Invoice#:</string>
    <string name="CustomerHead">Customer:</string>
    <string name="deletedelivery">Delete Delivery</string>
    <string name="ReceiptHead">Receipt#:</string>
    <string-array name="languages">
        <item>English</item>
        <item>हिंदी</item>
    </string-array>
    <string name="lang_eng">English</string>
    <string name="lang_hindi">हिंदी</string>
    <string name="uat_app_">UAT App!</string>
    <string name="payments">Receipt</string>
    <string name="viewpayments">View Receipt</string>
    <string name="paymentdetails">Receipt Details</string>
    <string name="createpayment">[ Create Receipt ]</string>
    <string name="company">Company *</string>
    <string name="payable">Payable\u20B9</string>
    <string name="balance">Balance\u20B9</string>
    <string name="enter_cashamount">Enter Cash Amount</string>
    <string name="cashamt">Cash\u20B9 *</string>
</resources>