<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_log"
        android:showAsAction="always"
        android:title="@string/action_settings"
        tools:ignore="AppCompatResource">
        <menu>
             <item
                android:id="@+id/action_changelanguage"
                 android:showAsAction="always"
                android:title="@string/change_language">
            </item>
            <item
                android:id="@+id/action_changepassword"
                android:showAsAction="always"
                android:title="@string/change_password">
            </item>
            <item
                android:id="@+id/action_logout"
                android:title="@string/logout">
            </item>
        </menu>
    </item>

</menu>