<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/barLightColor" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
        style="@style/style_topbar"
            android:text="@string/change_password" />

        <TextView
            android:id="@+id/tvPasswordExpired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/password_expired"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:text="@string/old_password"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etOldPassword"
                style="@style/edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dip"
                android:inputType="textPassword"
                android:hint="@string/enter_old_password"
                android:maxLength="50"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:text="@string/new_password"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNewPassword"
                style="@style/edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dip"
                android:inputType="textPassword"
                android:hint="@string/enter_new_password"
                android:maxLength="50"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:text="@string/confirm_password"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etConfirmPassword"
                style="@style/edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dip"
                android:inputType="textPassword"
                android:hint="@string/enter_confirm_password"
                android:maxLength="50"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:gravity="right"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_password_all" />

                <CheckBox
                    android:id="@+id/ckShowPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/custom_checkbox_design"
                    android:checked="false"
                    android:focusable="false" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvInstructionsHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:gravity="center"
                android:text="@string/the_password_should_consists_of_"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dip" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded" >

                <Button
                    android:id="@+id/btnChangePassword"
                    android:layout_width="210sp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="1sp"
                    android:background="@drawable/button_design"
                    android:paddingBottom="5sp"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp"
                    android:paddingTop="5sp"
                    android:text="@string/change_password_btn"
                    android:textColor="#FFFFFF" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>