<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="lateralpraxis.lpdnd.OutletPayment.ActivityCreatePayments">

    <TextView
        style="@style/style_topbar"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/payments" />
    <TextView
        android:id="@+id/tvHiddenPayableAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/llPayable"
        style="@style/style_layout">

        <TextView
            android:id="@+id/tvPayable"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/payable"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPayableAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCash"
        style="@style/style_layout">

        <TextView
            android:id="@+id/tvCash"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/cashamt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etCashAmount"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_cashamount"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llBalance"
        style="@style/style_layout" >

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/balance"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBalanceData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#800000"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:paddingRight="4dp"
        android:paddingBottom="2dp"
        android:weightSum="1">

        <Button
            android:id="@+id/btnSave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="1sp"
            android:layout_weight=".5"
            android:background="@drawable/button_design"
            android:paddingBottom="5sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingTop="5sp"
            android:text="@string/submit"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
