<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        style="@style/style_topbar"
        android:text="@string/cashDeposit" />

    <LinearLayout
        style="@style/style_gridheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvRowHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="2dp"
            android:paddingEnd="2dp"
            android:text="@string/cashDepositDeleteHead"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="afterDescendants"
        android:divider="@color/black"
        android:dividerHeight="1sp"
        android:focusable="true"
        android:minHeight="64sp" />

    <TextView
        android:id="@+id/tvNoRecord"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:text="@string/norecord"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>